--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/David9792/peliculas_api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0"
   }
